--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <button class="btn btn-primary">Test</button>
-    <script> src="js/bootstrap.bundle.min.js"</script>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-6">
+                <div class="card rounded-4 shadow-lg mb-5">
+                    <div class="card-body">
+                        <div>
+                            <h4 class="fw-bold">Free</h4>
+                            <p class="text-muted">For freelancers</p>
+                        </div>
+                        <h2 class="fs-1 fw-bolded mt-4">$0</h2>
+                        <ul class="list-group border-0">
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> Single User</li>
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> 10 Downloads</li>
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> Faster Files</li>
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> 25 Custom Packs</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">col2</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script> src = "js/bootstrap.bundle.min.js"</script>
 </body>
+
 </html>
