--- a/index.html
+++ b/index.html
@@ -23,20 +23,43 @@
                     <div class="card-body">
                         <div>
                             <h4 class="fw-bold">Free</h4>
-                            <p class="text-muted">For freelancers</p>
+                            <p class="text-muted">For Freelancers</p>
                         </div>
-                        <h2 class="fs-1 fw-bolded mt-4">$0</h2>
-                        <ul class="list-group border-0">
+                        <h2 class="fs-1 fw-bolded mt-4 mb-5">$0</h2>
+                        <ul class="list-group list-group-flush mb-5 fs-5 vstack gap-2">
                             <li class="list-group-item border-0"><i class="bi bi-check2"></i> Single User</li>
                             <li class="list-group-item border-0"><i class="bi bi-check2"></i> 10 Downloads</li>
                             <li class="list-group-item border-0"><i class="bi bi-check2"></i> Faster Files</li>
                             <li class="list-group-item border-0"><i class="bi bi-check2"></i> 25 Custom Packs</li>
                         </ul>
+                        <div class="d-grid">
+                            <button class="btn btn-dark rounded-2 mt-5 mb-4">Subscribe</button>
+                        </div>
                     </div>
-                    <div class="col-md-6">col2</div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card rounded-4 shadow-lg mb-5" data-bs-theme="dark">
+                    <div class="card-body">
+                        <div>
+                            <h4 class="fw-bold">Pro</h4>
+                            <p class="text-muted">For Agencies</p>
+                        </div>
+                        <h2 class="fs-1 fw-bolded mt-4 mb-5">$100</h2>
+                        <ul class="list-group list-group-flush mb-5 fs-5 vstack gap-2">
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> Unlimited User</li>
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> Unlimited Downloads</li>
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> Fully Editable Files</li>
+                            <li class="list-group-item border-0"><i class="bi bi-check2"></i> 200+ Custom Packs</li>
+                        </ul>
+                        <div class="d-grid">
+                            <button class="btn btn-light rounded-2 mt-5 mb-4">Subscribe</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <script> src = "js/bootstrap.bundle.min.js"</script>
 </body>
